# auto_caption

./: .gitignore  Makefile  README.md  pyproject.toml
src/auto_caption/: __init__.py  cli.py  exporters.py  transcriber.py
