[project]
name = "auto-caption"
version = "0.1.0"
description = "Automatic video subtitle generator powered by mlx-whisper (Chinese-first)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mlx-whisper>=0.4.2",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[project.scripts]
auto-caption = "auto_caption.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"src/auto_caption/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
